chapter-07-securing-kubernetes-workloads-devsecops/network-policies/allow-namespace-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ns-internal
  namespace: sensitive-ns
spec:
  podSelector: {}
  ingress:
  - from:
    - podSelector: {}
  egress:
  - to:
    - podSelector: {}
