chapter-07-securing-kubernetes-workloads-devsecops/network-policies/deny-all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: sensitive-ns
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
